syntax = "proto3";

package rpc;

service ManagerServerRPC {
    rpc SetExceptionMsg (MGExceptionMsgReq) returns (MGExceptionMsgRes) {}
}

message MGExceptionMsgReq {
    int64  sourceUID = 1;
    int64  targetUID = 2;
    string msgID     = 3;
    string msg       = 4;
}

message MGExceptionMsgRes {
    uint32 errCode = 1;
    string errStr  = 2;
}

